feat: wire singleton event manager into admin donation flow